--- a/libokhttp/build.gradle
+++ b/libokhttp/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'maven'
 apply plugin: 'com.android.library'
 
 android {
@@ -24,4 +25,16 @@ dependencies {
     compile 'com.zhy:okhttputils:2.3.7'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.google.code.gson:gson:2.6.2'
+}
+
+uploadArchives{
+    repositories.mavenDeployer{
+        def deployPath = file(getProperty('aar.mavenLibOkHttp'))
+        repository(url:"file://${deployPath.absolutePath}")
+        pom.project{
+            groupId "com.zhihaoliang.util.http"
+            artifactId "libokhttp"
+            version "1.0"
+        }
+    }
 }
